tests/semantica/valid/if/test1.ctds
program 
    {
		void main(){
			if(true) then {
				return;
			}
		}
    }