tests/semantica/invalid/if/test1.ctds
program
	{
		void main(){
			if(2) then {
				
			}
		}
	}